Fix gap above the hero

--- a/website/source/assets/stylesheets/_header.scss
+++ b/website/source/assets/stylesheets/_header.scss
@@ -11,6 +11,8 @@ body.page-sub{
 }
 
 #header {
+  margin-top: -20px;
+
   .navbar-brand {
     .logo{
       font-size: 32px;
